--- a/gui/design/control_new.ui
+++ b/gui/design/control_new.ui
@@ -209,7 +209,7 @@ QStackedWidget QTextBrowser {
           <string notr="true"/>
          </property>
          <property name="currentIndex">
-          <number>2</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="pg_init">
           <layout class="QVBoxLayout" name="verticalLayout_7" stretch="1,5">
@@ -428,9 +428,9 @@ QStackedWidget QTextBrowser {
               </property>
               <item>
                <widget class="QFrame" name="frame_5">
-                <layout class="QVBoxLayout" name="verticalLayout_19">
+                <layout class="QVBoxLayout" name="verticalLayout_19" stretch="0,0">
                  <property name="spacing">
-                  <number>10</number>
+                  <number>0</number>
                  </property>
                  <property name="leftMargin">
                   <number>0</number>
@@ -483,7 +483,7 @@ QStackedWidget QTextBrowser {
                        </size>
                       </property>
                       <property name="text">
-                       <string>一键检查所有电机</string>
+                       <string>电机状态确认</string>
                       </property>
                      </widget>
                     </item>
@@ -498,7 +498,7 @@ QStackedWidget QTextBrowser {
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
-                   <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,1,1,1,1,1,1,1,1,1,1,1,1,1">
+                   <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,0,0,0,0,0,0,0,0,0,0,0,0">
                     <property name="spacing">
                      <number>10</number>
                     </property>
@@ -515,184 +515,226 @@ QStackedWidget QTextBrowser {
                      <number>0</number>
                     </property>
                     <item>
-                     <widget class="QPushButton" name="check_1">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_1">
                       <property name="text">
                        <string>M1</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_2">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_2">
                       <property name="text">
                        <string>M2</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_3">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_3">
                       <property name="text">
                        <string>M3</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_4">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_4">
                       <property name="text">
                        <string>M4</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_5">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_5">
                       <property name="text">
                        <string>M5</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_6">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_6">
                       <property name="text">
                        <string>M6</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_7">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_7">
                       <property name="text">
                        <string>M7</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_8">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_8">
                       <property name="text">
                        <string>M8</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_9">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_9">
                       <property name="text">
                        <string>M9</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_10">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_10">
                       <property name="text">
                        <string>M10</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_11">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_11">
                       <property name="text">
                        <string>M11</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_12">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_12">
                       <property name="text">
                        <string>M12</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_13">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_13">
                       <property name="text">
                        <string>M13</string>
                       </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="check_14">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
+                     <widget class="QLabel" name="check_14">
                       <property name="text">
                        <string>M14</string>
+                      </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="margin">
+                       <number>5</number>
+                      </property>
+                      <property name="indent">
+                       <number>-1</number>
                       </property>
                      </widget>
                     </item>
