给UI添加一个状态

--- a/gui/design/control_v3.ui
+++ b/gui/design/control_v3.ui
@@ -3092,6 +3092,43 @@ QStackedWidget QTextBrowser {
                   </layout>
                  </widget>
                 </item>
+                <item>
+                 <widget class="QGroupBox" name="switch_status">
+                  <property name="title">
+                   <string>switch</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignCenter</set>
+                  </property>
+                  <layout class="QVBoxLayout" name="verticalLayout_36">
+                   <property name="spacing">
+                    <number>0</number>
+                   </property>
+                   <property name="leftMargin">
+                    <number>0</number>
+                   </property>
+                   <property name="topMargin">
+                    <number>0</number>
+                   </property>
+                   <property name="rightMargin">
+                    <number>0</number>
+                   </property>
+                   <property name="bottomMargin">
+                    <number>0</number>
+                   </property>
+                   <item>
+                    <widget class="QLabel" name="isopen">
+                     <property name="text">
+                      <string>status</string>
+                     </property>
+                     <property name="alignment">
+                      <set>Qt::AlignCenter</set>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </widget>
+                </item>
                </layout>
               </item>
              </layout>
